--- a/style/main.css
+++ b/style/main.css
@@ -565,7 +565,8 @@ hr {
   line-height: 42px;
   margin-bottom: 0; }
 
-.restart-button {
+.restart-button, .save-record-button, .restore-record-button {
+  margin: 0 0 0 20px;
   display: inline-block;
   background: #8f7a66;
   border-radius: 3px;
@@ -619,12 +620,12 @@ hr {
     box-sizing: border-box;
     line-height: 1.65; }
 
-  .restart-button {
-    width: 42%;
-    padding: 0;
+  .restart-button, .save-record-button, .restore-record-button {
+    padding: 0 20px;
     display: block;
     box-sizing: border-box;
-    margin-top: 2px; }
+    margin-top: 2px;
+    margin-left: 5px;	}
 
   .game-container {
     margin-top: 17px;
